--- a/todo/index.html
+++ b/todo/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+ <title>To-Do List Application</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+ <h1>To-Do List Application</h1>
+ <div class="container">
+  <input type="text" id="task-input" placeholder="Enter task...">
+  <button onclick="addTask()">Add Task</button>
+  <table id="task-list">
+   <thead>
+    <tr>
+     <th>Task</th>
+     <th>Action</th>
+    </tr>
+   </thead>
+   <tbody>
+   </tbody>
+  </table>
+ </div>
 
+ <script src="script.js"></script>
+</body>
+</html>
